* IMPROVEMENT: PKI truststore initialization is performed on the need basis.
* IMPROVEMENT: Added signature verification according to policies.
* IMPROVEMENT: Created KSI_HmacHasher interface for incremental HMAC computation.
* IMPROVEMENT: Certificate constraints can be set and verified per publications file.
* IMPROVEMENT: Add preprocessor parseable version no.
* IMPROVEMENT: KSI_receivePublicationsFile must not verify publications file automatically.
* BUGFIX: Invalid and misleading exception message on response publication time check.
* BUGFIX: Correcting memory leaks when using Windows Crypt32 library.
* BUGFIX: Correcting usage of isForward and isNonCritical flags in KSI_TlvTemplate_serializeObject and KSI_TlvTemplate_writeBytes. Added tests to cover this bug.
* IMPROVEMENT: KSI_LIST may contain NULL values.
* BUGFIX: Certificate and publication records are not mandatory for publications file.
* IMPROVEMENT: Integration tests configuration file error handling improved.
* IMPROVEMENT: Handling for reading server responses from tlv files.
* BUGFIX: Removed unused function.
* BUGFIX: Fixed macro redefinition issue.
* BUGFIX: Fixed KSI_Signature_getSigningTime() when signature does not containa calendar chain.
* IMPROVEMENT: Created KSI_HmacHasher interface for incremental HMAC computation.
* IMPROVEMENT: Added detailed coverage report in html format.
* IMPROVEMENT: In case of no errors KSI_ERR_getBaseErrorMessag returns string indicating that there are no errors.
* BUGFIX: KSI_ERR_getBaseErrorMessage error code returned by the output parameter fixed when error count is zero.
* BUGFIX: KSI_DataHasher memory leak on immediate reset after open.
* BUGFIX: Fixed HMAC for hash functions with other than 512 bit internal block size.
* IMPROVEMENT: Removed build warnings on OSX.
* IMPROVEMENT: Added mechanism to disable deprecation warnings.

Version 3.7

2016-01-26 release(3.7.1037)
* BUGFIX: Fixed building from SRPM
  Thanks to Peter Portante