@@ -125,7 +125,6 @@ EXPORTS
 	KSI_RDR_read_ex
 	KSI_RDR_read_ptr
 	KSI_RDR_close
-	KSI_RDR_verifyEnd
 	KSI_IO_readSocket
 	KSI_IO_readFile
 ;ksi.h
