@@ -1,3 +1,4 @@
+* IMPROVEMENT: Removed Unused function KSI_RDR_verifyEnd.
 * IMPROVEMENT: PKI truststore initialization is performed on the need basis.
 * IMPROVEMENT: Added signature verification according to policies.
 * IMPROVEMENT: Created KSI_HmacHasher interface for incremental HMAC computation.
